k8s/legacy/dev/apps/miniflux/manifests/miniflux.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: miniflux
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app.kubernetes.io/instance: miniflux
    app.kubernetes.io/name: miniflux
    app.kubernetes.io/service: miniflux
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: miniflux
    app.kubernetes.io/name: miniflux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app.kubernetes.io/instance: miniflux
    app.kubernetes.io/name: miniflux
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
      app.kubernetes.io/instance: miniflux
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: miniflux
        app.kubernetes.io/name: miniflux
    spec:
      containers:
        - env:
            - name: miniflux
              value: https://miniflux.dk8s.ipreston.net
            #- name: CREATE_ADMIN
            #  value: "1"
            - name: LOG_DATE_TIME
              value: "1"
            - name: PORT
              value: "80"
            - name: RUN_MIGRATIONS
              value: "1"
            - name: HELPER_POSTGRES_HOST
              value: miniflux-db-cnpg-v1-rw
            - name: HELPER_POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: miniflux-pg-secret
                  key: username
            - name: HELPER_POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: miniflux-encoded-postgres-pass
                  key: POSTGRES_ENCODED_MINIFLUX_PASS
            - name: DATABASE_URL
              value: "postgres://$(HELPER_POSTGRES_USER):$(HELPER_POSTGRES_PASSWORD)@$(HELPER_POSTGRES_HOST):5432/miniflux"
          image: ghcr.io/miniflux/miniflux:2.2.15-distroless
          name: main
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux-ingress
  namespace: miniflux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`miniflux.dk8s.ipreston.net`)
      kind: Rule
      services:
        - name: miniflux
          port: 80
  tls:
    secretName: miniflux-web-ui-tls
